# swarm

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  swarm.yaml.example
docs/: claude-code-roadmap.md  features-roadmap.md  openapi.yaml  qa-mobile-findings-2026-05-20.md
docs/specs/: content-system-v1.md  daemon-god-object-refactor.md  managed-browser-v1.md  pipeline-detail-view.md  state-tracker-refactor.md
scripts/: check_pb_modal.py  check_share_target.py  docs_screenshots.py  mobile_qa.py
src/swarm/: __init__.py  cli.py  client.py  tunnel.py  update.py
src/swarm/analysis/: harness_digest.py  throughput.py
src/swarm/auth/: _oauth.py  graph.py  jira.py  mcp_token.py  oauth_server.py
src/swarm/config/: _known_keys.py  loader.py  models.py  serialization.py  validation.py
src/swarm/db/: buzz_store.py  config_store.py  core.py  playbook_store.py  proposal_store.py  queen_chat_store.py  schema.py  skills_store.py  task_store.py
src/swarm/drones/: backoff.py  dreamer.py  idle_watcher.py  inter_worker_watcher.py  log.py  nudge_guard.py  oversight_handler.py  pilot.py  poll_dispatcher.py  rules.py  standing_loop.py  state_tracker.py  store.py  task_lifecycle.py  verifier.py
src/swarm/feedback/: builder.py  collector.py  gh_submit.py  redact.py
src/swarm/hooks/: install.py
src/swarm/integrations/: jira.py
src/swarm/mcp/: _arg_types.py  queen_tools.py  server.py  tools.py  types.py
src/swarm/messages/: store.py
src/swarm/notify/: _util.py  bus.py  desktop.py  digest.py  email.py  terminal.py  webhook.py
src/swarm/pipelines/: engine.py  models.py  schedule.py
src/swarm/playbooks/: consolidator.py  synthesizer.py
src/swarm/providers/: base.py  claude.py  codex.py  opencode.py  tuned.py
src/swarm/pty/: bridge.py  holder.py  pool.py  process.py
src/swarm/queen/: context.py  json_extract.py  oversight.py  queen.py  runtime.py  session.py  verifier.py
src/swarm/server/: analyzer.py  api.py  attention_model.py  (+16 more)
tests/: conftest.py  test_analyzer.py  test_api.py  test_approve_always.py  test_attention_model.py  test_attention_routes.py  test_backoff.py  test_block_external.py  test_blockers.py  test_board.py  test_bridge.py  test_claim_file_handler.py  test_cli.py  test_code_review_fixes.py  test_codex_provider.py  test_codex_support.py  test_command_handler.py  test_config_editor.py  test_context.py  test_context_awareness.py  test_daemon.py  test_db.py  test_db_migrate.py  test_digest.py  test_directives.py  test_feedback_collector.py  test_feedback_gh_submit.py  test_feedback_redact.py  test_get_learnings_handler.py  test_goal_seeding.py  test_graph.py  test_harness_digest.py  test_idle_watcher.py  test_inter_worker_watcher.py  test_jira.py  test_jira_auth.py  test_learning_preload.py  test_live_db_safeguard.py  test_loop_runner.py  test_mcp_auth.py  (+47 more)
tests/db/: test_queen_chat_store.py
tests/server/: test_health.py  test_task_coordinator.py
tests/web/: test_auth_routes.py  test_login_routes.py
(+81 files in other folders)
