[project]
name = "swarm-ai"
version = "2026.5.20.2"
description = "A hive-mind for Claude Code agents — web orchestrator"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Brad Schleifer", email = "bschleifer@rcg.org" }
]
requires-python = ">=3.12"
keywords = ["claude", "ai", "agents", "pty", "orchestrator", "swarm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: aiohttp",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "click>=8.0,<9",
    "pyyaml>=6.0,<7",
    "aiohttp>=3.9,<4",
    "aiohttp-jinja2>=1.6,<2",
    "jinja2>=3.1,<4",
    "extract-msg>=0.48,<1",
    "webauthn>=2.0,<3",
    "croniter>=2.0,<3",
]

[project.urls]
Repository = "https://github.com/bschleifer/swarm"
Documentation = "https://github.com/bschleifer/swarm#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.1",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
swarm = "swarm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swarm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 30
testpaths = ["tests"]
norecursedirs = ["tests/fixtures"]
python_classes = ["Test[A-Z]*"]
filterwarnings = [
    "ignore::aiohttp.web.NotAppKeyWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::pytest.PytestCollectionWarning",
    "ignore::RuntimeWarning:collections",
]

[tool.mypy]
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "C901", "I", "UP", "RUF"]
ignore = [
    "RUF001",  # ambiguous unicode in strings (❯ is intentional prompt char)
    "RUF002",  # ambiguous unicode in docstrings (❯, × are intentional)
    "RUF003",  # ambiguous unicode in comments (❯, × are intentional)
    "UP042",   # str+Enum → StrEnum (deferred — changes serialization behavior)
]

[tool.ruff.lint.mccabe]
# Default is 10; raised to 12 so HTTP handlers with 3-4 early-return
# guards + a try/except don't constantly trip the hook.  Code that
# wants to be simpler still will; this just removes the friction of
# having to refactor a handler every time one more branch lands.
# If cyclomatic complexity keeps climbing (hit 14-15 regularly), that's
# a code-smell signal worth acting on — but 10 was tighter than this
# codebase's conventional style.
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["RUF059"]  # unused unpacked vars in test fixtures are intentional
